changed font color of headings to improve readability and added breaks to about section preview to solve weird text wrapping

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -149,7 +149,7 @@ input, select, textarea {
 		}
 
 	h1 {
-		color:rgb(0, 0, 0);
+		/* color:rgb(0, 0, 0); */
 		font-size: 2em;
 		line-height: 1.5em;
 	}
